--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -1,6 +1,15 @@
 //
 // For guidance on how to add CSS and SCSS see:
 // https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
-// 
+//
 
 // Add extra styles here
+@import "baseline.scss";
+
+
+.index__container {
+    background-color:  govuk-colour("light-grey");
+    border: 1px solid $govuk-border-colour;
+    padding: govuk-spacing(6);
+    margin-bottom:  govuk-spacing(6);
+}
