adjusted calculation run table with vertical alignment and added documentation for component with parameters

--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -66,6 +66,14 @@
         }) }}
 
         {{ calculationRow({
+          title: "Normal run R16",
+          href: "./classify/scenario1-run-details.html",
+          calculationId: "251120",
+          runDate: "20 Nov 2025 at 16:17",
+          runBy: "Bertie Basset"
+        }) }}
+
+        {{ calculationRow({
           title: "Calculation run 99",
           href: "./classify/scenario1-run-details.html",
           calculationId: "240008",
