--- a/app/views/baseline/includes/admin-tiles.njk
+++ b/app/views/baseline/includes/admin-tiles.njk
@@ -4,21 +4,21 @@
 
 <div class="govuk-grid-row tile-group">
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../default-settings-no.html">
+    <a class="min-height" href="../../{{version}}/settings/default-settings-no">
         <span class="govuk-heading-m heading">Manage default parameters</span>
         <span class="govuk-heading govuk-!-font-size-16">View or update the parameters</span>
     </a>
     </div>
 
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../la-settings-no">
+    <a class="min-height" href="../../{{version}}/settings/la-settings-no">
         <span class="govuk-heading-m heading">Manage local authority disposal costs</span>
         <span class="govuk-heading govuk-!-font-size-16">View or update disposal costs</span>
     </a>
     </div>
 
     <div class="govuk-grid-column-one-third tile">
-    <a class="min-height" href="../../name-no-file">
+    <a class="min-height" href="../../{{version}}/settings/name-no-file">
         <span class="govuk-heading-m heading">Run the calculator</span>
         <p></p>
         <span class="govuk-heading govuk-!-font-size-16">Use the default parameters to run the calculator</span>
