adding conditional dynamic run details and classifying pages and routes

--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -57,7 +57,7 @@
 
         {{ calculationRow({
           title: "Unclassified run R16",
-          href: "./classify/run-details-unclassified.html",
+          href: "./classify/run-details?calcRun=unclassified",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts"
@@ -65,7 +65,7 @@
 
         {{ calculationRow({
           title: "Initial classified run R16",
-          href: "./classify/run-details-initial.html",
+          href: "./classify/run-details?calcRun=initialRun",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts",
@@ -75,7 +75,7 @@
 
         {{ calculationRow({
           title: "Test classified run R16",
-          href: "./classify/run-details-test.html",
+          href: "./classify/run-details?calcRun=testRun",
           calculationId: "251115",
           runDate: "15 Nov 2025 at 12:17",
           runBy: "Jamie Roberts",
