added run-error page linked from dashboard

--- a/app/views/baseline/run-details/run-details.njk
+++ b/app/views/baseline/run-details/run-details.njk
@@ -93,7 +93,7 @@
                   Continue
                 </a>
 
-                <a class="govuk-link" href="./scenario1-dashboard-initial-run.html">Return to dashboard</a>
+                <a class="govuk-link" href="../paycal-dashboard">Return to dashboard</a>
               </div>
               
           {% else %}
