--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -57,7 +57,7 @@
 
         {{ calculationRow({
           title: "Unclassified run R16",
-          href: "./classify/run-details?calcRun=unclassified",
+          href: "./run-details/run-details?calcRun=unclassified",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts"
@@ -65,7 +65,7 @@
 
         {{ calculationRow({
           title: "Initial classified run R16",
-          href: "./classify/run-details?calcRun=initialRun",
+          href: "./run-details/run-details?calcRun=initialRun",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts",
@@ -73,9 +73,19 @@
           tagText: "Initial run classified"
         }) }}
 
+         {{ calculationRow({
+          title: "Error incomplete run R16",
+          href: "./run-details/run-error",
+          calculationId: "251120",
+          runDate: "20 Nov 2025 at 16:17",
+          runBy: "Jamie Roberts",
+          tagColour: "red",
+          tagText: "Error"
+        }) }}
+
         {{ calculationRow({
           title: "Test classified run R16",
-          href: "./classify/run-details?calcRun=testRun",
+          href: "./run-details/run-details?calcRun=testRun",
           calculationId: "251115",
           runDate: "15 Nov 2025 at 12:17",
           runBy: "Jamie Roberts",
