added run delete page with variable content

--- a/app/views/baseline/paycal-dashboard.njk
+++ b/app/views/baseline/paycal-dashboard.njk
@@ -75,7 +75,7 @@
 
          {{ calculationRow({
           title: "Error incomplete run R16",
-          href: "./run-details/run-error",
+          href: "./run-details/run-error?calcRun=runError",
           calculationId: "251120",
           runDate: "20 Nov 2025 at 16:17",
           runBy: "Jamie Roberts",
